2007-06-17 Gong Ding <gdiso@ustc.edu>
 * src/spicelib/devices/dev.c: use a more flexiable way to define device.
 If it doesn't work, one can returen to old version (rename as dev_old.c).
 
These files are modified for avoiding NULL DEVices[] pointer.
 * spicelib/analysis/acan.c:  
 * spicelib/analysis/cktdest.c:
 * spicelib/analysis/cktdisto.c:
 * spicelib/analysis/cktdump.c:
 * spicelib/analysis/cktfbran.c:
 * spicelib/analysis/cktic.c:
 * spicelib/analysis/cktload.c:
 * spicelib/analysis/cktnoise.c:
 * spicelib/analysis/cktop.c:
 * spicelib/analysis/cktpzld.c:
 * spicelib/analysis/cktpzset.c:
 * spicelib/analysis/cktsetup.c:
 * spicelib/analysis/ckttemp.c:
 * spicelib/analysis/ckttrunc.c:
 * spicelib/analysis/ckttyplk.c:
 * spicelib/parser/inptyplk.c:
The modifications should not affect ngspice's function. 

2007-06-14 Paolo Nenzi <p.nenzi@ieee.org>

 * src/misc/misc_time.c: added a casting to doube in seconds function to
   solve the "negative times" in acct command.

2007-05-13 Paolo Nenzi <p.nenzi@ieee.org>

 * src/spicelib/devices/dev.c: updated NUMDEV to reflect actual situation.
 * src/spicelib/devices/adms/admst/ngspiceVersion.xml: added code for ekv.

2007-05-11 Laurent Lemaitre <r29173@users.sourceforge.net>

 * src/spicelib/devices/adms/admst/ngspiceMODULEguesstopology.c.xml,
   src/spicelib/devices/adms/admst/ngspiceVersion.xml,
   src/spicelib/devices/adms/admst/ngspiceMODULEdefs.h.xml: 
   added support to "div" builtin function.


2007-05-09 Dietmar Warning
 
 * src/spicelib/devices/dev.c: reserved space for ekv model.

2007-05-08 Dietmar Warning

 * src/spicelib/devices/amds/ekv/: Initial import of the ekv model (long
   channel). 

2007-05-06 Dietmar Warning

 * src/spicelib/parser/inpdomod.c: small adaptation for ekv and psp102.


2007-04-30 Gong Ding <gdiso@ustc.edu>
  
  Add NDEV (numerical device) to device library. It is an interface 
  to call my 2d semiconductor simulation code via network. 